completes reg-ex adds css file

--- a/HTML Document Standards/Preparing for HTML/Form Validation/index.html
+++ b/HTML Document Standards/Preparing for HTML/Form Validation/index.html
@@ -11,12 +11,11 @@
 <body>
     <section class="overlay">
         <h1>Guess the right number!</h1>
-        <form action="check.html" method="GET">
+        <form action="#" method="GET">
             <label for="guess">Enter a number between 1-10:</label>
             <br>
             <!-- This input field is has restricted range -->
             <input type="number" name="guess" id="guess" required min="1" max="10">
-
             <br>
             <input type="submit" id="submission" value="Submit">
         </form>
@@ -25,11 +24,11 @@
     <section class="overlay">
         <h1>Sign Up</h1>
         <p>Create an account:</p>
-        <form action="submission.html" method="GET">
+        <form action="#" method="GET">
 
             <label for="username">Username:</label>
-            <!-- The minlength and maxlength attributes in the input fields restricts text length -->
             <br>
+            <!-- The minlength and maxlength attributes in the input fields restricts text length -->
             <input id="username" name="username" type="text" required minlength="3" maxlength='15'>
             <br>
             <label for="pw">Password:</label>
@@ -39,6 +38,27 @@
             <input type="submit" value="Submit">
         </form>
     </section>
+    <section class="overlay">
+        <h1>Sign Up</h1>
+        <p>Create an account:</p>
+        <form action="#" method="GET">
+            <label for="username">Username:</label>
+            <br>
+            <!--Add the pattern attribute to the input below-->
+            <input id="username" name="username" type="text" required minlength="3" maxlength="15"
+                pattern='[a-zA-Z0-9]+'>
+            <!-- The username is restricted to only letters and numbers -->
+            <br>
+            <label for="pw">Password:</label>
+            <br>
+            <input id="pw" name="pw" type="password" required minlength="8" maxlength="15">
+            <br>
+            <input type="submit" value="Submit">
+        </form>
+    </section>
+
+    <!-- This is a link to the MDN regex documentation https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions -->
+
 </body>
 
 </html>
