add figure/figcaption info

--- a/HTML Document Standards/Preparing for HTML/Semantic HTML/semantic-markup.html
+++ b/HTML Document Standards/Preparing for HTML/Semantic HTML/semantic-markup.html
@@ -26,9 +26,18 @@
             <article>
                 <!-- This element is used to contain articles, blogs and other relevant text or media -->
             </article>
+
             <aside>
                 <!-- This element is used to enhance another element and contains content that is not impact the meaning of the main content -->
             </aside>
+
+            <figure>
+                <img src='<!-- The location of the media source goes here -->'>
+                <figcaption>
+                    <!-- This element is used to describe the media in the figure tag -->
+                </figcaption>
+                <!-- This element is used to hold media such as an image, illustration, diagram, code snippet (etc...). This element can be removed or relocated without effecting the flow of the document -->
+            </figure>
 
         </section>
 
