Add audio and attributes

--- a/HTML Document Standards/Preparing for HTML/Semantic HTML/semantic-markup.html
+++ b/HTML Document Standards/Preparing for HTML/Semantic HTML/semantic-markup.html
@@ -39,6 +39,13 @@
                 <!-- This element is used to hold media such as an image, illustration, diagram, code snippet (etc...). This element can be removed or relocated without effecting the flow of the document -->
             </figure>
 
+            <audio>
+                <!-- This element is used to embed audio into the document, it also uses src to link to the audio source. -->
+                <!-- contains a link to the media source -->
+                <source src='https://content.codecademy.com/courses/SemanticHTML/dogBarking.mp3'
+                    type='<!-- the audio type goes here, i.e. "audio/mp3" (other audio attributes can be found at https://developer.mozilla.org/en-US/docs/Web/HTML/Element/audio#Attributes -->'>
+            </audio>
+
         </section>
 
     </main>
