updates audio element

--- a/HTML Document Standards/Preparing for HTML/Semantic HTML/semantic-markup.html
+++ b/HTML Document Standards/Preparing for HTML/Semantic HTML/semantic-markup.html
@@ -42,7 +42,7 @@
             <audio>
                 <!-- This element is used to embed audio into the document, it also uses src to link to the audio source. -->
                 <!-- contains a link to the media source -->
-                <source src='https://content.codecademy.com/courses/SemanticHTML/dogBarking.mp3'
+                <source src='#'
                     type='<!-- the audio type goes here, i.e. "audio/mp3" (other audio attributes can be found at https://developer.mozilla.org/en-US/docs/Web/HTML/Element/audio#Attributes -->'>
             </audio>
 
