add video and embed

--- a/HTML Document Standards/Preparing for HTML/Semantic HTML/semantic-markup.html
+++ b/HTML Document Standards/Preparing for HTML/Semantic HTML/semantic-markup.html
@@ -46,6 +46,13 @@
                     type='<!-- the audio type goes here, i.e. "audio/mp3" (other audio attributes can be found at https://developer.mozilla.org/en-US/docs/Web/HTML/Element/audio#Attributes -->'>
             </audio>
 
+            <video>
+                <!-- This element displays video onto the page and has several attributes like audio tags that allow the video to be manipulated -->
+            </video>
+
+            <!--The <embed> element is self closing tag that embeds local media or files from other sites into the page -->
+            <embed />
+
         </section>
 
     </main>
