Add Mission section

--- a/Styling a Website/Layout_with_Flexbox/index.html
+++ b/Styling a Website/Layout_with_Flexbox/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./style.css" type="text/css">
 </head>
 
-<body>
-    <header>
+<body class='container'>
+    <header class='container'>
         <div class="logo">
             <img src="./resources/img-tea-cozy-logo.png" alt="brand logo">
         </div>
@@ -21,7 +21,38 @@
     </header>
     <main class='container'>
 
+        <section class="mission container">
+
+            <div class="banner container">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            </div>
+
+        </section>
+
+        <section class="featured container">
+
+        </section>
+
+        <section class="locations container">
+
+        </section>
+
+
     </main>
+
+    <footer class="container">
+
+        <section class="contact">
+
+        </section>
+
+        <section class="copyright">
+
+        </section>
+
+    </footer>
+
 </body>
 
 </html>
