--- a/Styling a Website/Layout_with_Flexbox/index.html
+++ b/Styling a Website/Layout_with_Flexbox/index.html
@@ -32,23 +32,85 @@
 
         <section class="featured container">
 
+            <h2>Tea of the Month</h2>
+            <h4>What's Sleepin at The Tea Cozy?</h4>
+
+            <div class="featured-gallery container">
+                <div class="item">
+                    <img src="./resources/img-berryblitz.jpg" alt="Fall Berry">
+                    <h4>
+                        Fall Berry Blitz Tea
+                    </h4>
+                </div>
+                <div class="item">
+                    <img src="./resources/img-spiced-rum.jpg" alt="Spiced Rum">
+                    <h4>
+                        Spiced Rum Tea
+                    </h4>
+                </div>
+                <div class="item">
+                    <img src="./resources/img-donut.jpg" alt="Seasonal Donuts">
+                    <h4>
+                        Seasonal Donuts
+                    </h4>
+                </div>
+                <div class="item">
+                    <img src="./resources/img-myrtle-ave.jpg" alt="Myrtle Ave">
+                    <h4>
+                        Myrtle Ave Tea
+                    </h4>
+                </div>
+                <div class="item">
+                    <img src="./resources/img-bedford-bizarre.jpg" alt="Bedford Bizarre">
+                    <h4>
+                        Bedford Bizarre Tea
+                    </h4>
+                </div>
+            </div>
+
         </section>
 
+
         <section class="locations container">
+            <h2>Locations</h2>
+
+            <div class="card-container container">
+                <div class="card">
+                    <h3>Downtown</h3>
+                    <p>384 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="card">
+                    <h3>East Bayside</h3>
+                    <p>3433 Phisherman's Avenue</p>
+                    <p>(Northwest Corner)</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="card">
+                    <h3>Oakdale</h3>
+                    <p>515 Crescent Avenue</p>
+                    <p>Second Floor</p>
+                    <p>Portland, Maine</p>
+                </div>
+            </div>
 
         </section>
 
 
     </main>
 
+    <div class="contact container">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+    </div>
+
     <footer class="container">
 
-        <section class="contact">
-
-        </section>
 
         <section class="copyright">
-
+            <h5>copyright The Tea Cozy 2017</h5>
         </section>
 
     </footer>
